client/src/stylesheets/game/modals/PlayerModal.scss
.c-player-modal {
  width: 65rem;
  height: 45rem;
  max-width: none;
  padding: 0.5rem;
  border: 0.125rem solid $space-lightgreen;
  margin: 0;
  background-color: $space-gray;

  .top-wrapper,
  .bottom-wrapper {
    width: 100%;
    max-width: none;
    @include reset-padding-margin;
  }

  .top-wrapper {
    height: 25%;

    .top {
      @include expand;
      max-width: none;
      @include reset-padding-margin;

      .wrapper {
        @include expand;
        margin: 0;

        .picture,
        .information,
        .trade {
          height: 100%;
          padding: 0;
        }

        .picture {
          overflow: hidden;
          @include make-column-and-center;

          .indicator {
            height: 8rem;
            width: 8rem;
            padding: 0.25rem;
            border-radius: 50%;

            .frame {
              @include expand;
              border-radius: 50%;
              @include make-center;

              img {
                object-fit: cover;
                height: 60%;
              }
            }
          }
        }

        .information {
          @include make-column-and-center;
          align-items: flex-start;

          .role {
            margin-bottom: 0.25rem;
            color: $space-white;
            font-size: $font-large;
            font-weight: $font-weight-maven-pro-bold;
          }

          .score {
            margin-bottom: 0.25rem;
            color: $space-white;
            font-size: $font-med;
            font-weight: $font-weight-maven-pro-medium;
          }

          .ranking {
            margin-bottom: 0;
            color: $space-white;
            font-size: $font-med;
            font-weight: $font-weight-maven-pro-medium;
          }
        }

        .trade {
          @include make-column-and-center;

          button {
            @include space-button;
          }
        }
      }
    }
  }

  .bottom-wrapper {
    position: relative;
    height: 75%;
    padding-top: 0.5rem;

    .bottom {
      @include expand;
      max-width: none;
      @include reset-padding-margin;

      .wrapper {
        @include expand;
        max-width: none;
        @include reset-padding-margin;

        .inventory {
          height: 100%;
          padding: 0 0.5rem 0 0;
          @include make-column-and-top;

          .topbar {
            height: 10%;
            flex-shrink: 0;
            width: 100%;
            padding: 0.25rem 1rem;
            margin-bottom: 0.5rem;
            @include make-center;
            background-color: $new-space-orange;

            .title {
              margin: 0 1rem 0 0;
              font-size: $font-med;
              font-weight: $font-weight-maven-pro-bold;
              color: $space-gray;
            }
          }

          .outer-wrapper {
            flex-grow: 1;
            width: 100%;
            overflow-y: hidden;

            .unavailable {
              @include expand;
              @include make-center;

              p {
                font-size: $font-med;
                font-weight: $font-weight-maven-pro-medium;
                color: $space-white-opaque-2;
              }
            }

            .wrapper {
              width: 100%;
              overflow-y: scroll;
            }
          }
        }

        .purchasable-accomplishments {
          height: 100%;
          padding: 0;
          @include make-column-and-top;

          .topbar {
            height: 10%;
            flex-shrink: 0;
            width: 100%;
            padding: 0.25rem 1rem;
            margin-bottom: 0.5rem;
            @include make-center;
            background-color: $new-space-orange;

            .title {
              margin-bottom: 0;
              color: $space-gray;
              font-size: $font-med;
              font-weight: $font-weight-maven-pro-bold;
            }
          }

          .buttons {
            height: 7.5%;
            flex-shrink: 0;
            width: 100%;
            margin-bottom: 0.5rem;
            @include make-center;

            button {
              @include reset-button;
              height: 100%;
              width: 50%;
              padding: 0;
              margin: 0;
              font-size: $font-med;
              font-weight: $font-weight-maven-pro-regular;
              color: $new-space-orange;
              border: 0.0625rem solid $new-space-orange;

              &:disabled {
                opacity: 0.5;
              }
            }

            .selected {
              color: $space-gray;
              background-color: $new-space-orange;
            }
          }

          .outer-wrapper {
            flex-grow: 1;
            width: 100%;
            padding: 0.5rem;
            background-color: $space-white-opaque-1;
            overflow-y: hidden;

            .unavailable {
              @include expand;
              @include make-center;

              p {
                font-size: $font-med;
                font-weight: $font-weight-maven-pro-medium;
                color: $space-white-opaque-2;
              }
            }

            .wrapper {
              width: 100%;
              @include make-column-and-top;
              overflow-y: scroll;
            }
          }
        }
      }
    }
  }
}

